--- a/notebooks/Notbremse.ipynb
+++ b/notebooks/Notbremse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89cb1805-f699-4955-8acb-4dc96fffb087",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aeca8142-9021-4356-8116-ad15bda98503",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,34 @@
    "source": [
     "covid.Meldedatum = pd.DatetimeIndex(covid.Meldedatum.dt.date)\n",
     "covid.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "793f4e7a-c941-45db-83ad-3ad5fc2c367e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1799157 entries, 0 to 1799156\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Dtype              \n",
+      "---  ------       -----              \n",
+      " 0   AnzahlFall   int64              \n",
+      " 1   Meldedatum   datetime64[ns, UTC]\n",
+      " 2   IdLandkreis  int64              \n",
+      " 3   NeuerFall    int64              \n",
+      "dtypes: datetime64[ns, UTC](1), int64(3)\n",
+      "memory usage: 54.9 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "covid.info(memory_usage=\"deep\")"
    ]
   },
   {
